exports[`test filters can be aliased 1`] = `
Object {
  "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
        "line": 2,
        "nodes": Array [
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
              "line": 3,
              "nodes": Array [
                Object {
                  "attrs": Array [],
                  "block": Object {
                    "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                    "line": 3,
                    "nodes": Array [
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 4,
                        "type": "Text",
                        "val": "function myFunc(foo) {",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 5,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 5,
                        "type": "Text",
                        "val": "  return foo;",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 6,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 6,
                        "type": "Text",
                        "val": "}",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                  "line": 3,
                  "name": "minify",
                  "type": "Text",
                  "val": "function myFunc(n){return n}",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
            "line": 3,
            "name": "cdata",
            "type": "Text",
            "val": "<![CDATA[function myFunc(n){return n}]]>",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
      "isInline": false,
      "line": 2,
      "name": "script",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`test options are applied before aliases 1`] = `
Object {
  "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
  "line": 0,
  "nodes": Array [
    Object {
      "attributeBlocks": Array [],
      "attrs": Array [],
      "block": Object {
        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
        "line": 2,
        "nodes": Array [
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
              "line": 3,
              "nodes": Array [
                Object {
                  "attrs": Array [],
                  "block": Object {
                    "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                    "line": 3,
                    "nodes": Array [
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 4,
                        "type": "Text",
                        "val": "function myFunc(foo) {",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 5,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 5,
                        "type": "Text",
                        "val": "  return foo;",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 6,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 6,
                        "type": "Text",
                        "val": "}",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                  "line": 3,
                  "name": "minify",
                  "type": "Text",
                  "val": "function myFunc(n) {
    return n;
}",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
            "line": 3,
            "name": "cdata",
            "type": "Text",
            "val": "<![CDATA[function myFunc(n) {
    return n;
}]]>",
          },
          Object {
            "attrs": Array [],
            "block": Object {
              "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
              "line": 7,
              "nodes": Array [
                Object {
                  "attrs": Array [],
                  "block": Object {
                    "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                    "line": 7,
                    "nodes": Array [
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 8,
                        "type": "Text",
                        "val": "function myFunc(foo) {",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 9,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 9,
                        "type": "Text",
                        "val": "  return foo;",
                      },
                      Object {
                        "column": 1,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 10,
                        "type": "Text",
                        "val": "
",
                      },
                      Object {
                        "column": 5,
                        "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                        "line": 10,
                        "type": "Text",
                        "val": "}",
                      },
                    ],
                    "type": "Block",
                  },
                  "column": 9,
                  "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
                  "line": 7,
                  "name": "uglify-js",
                  "type": "Text",
                  "val": "function myFunc(n){return n}",
                },
              ],
              "type": "Block",
            },
            "column": 3,
            "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
            "line": 7,
            "name": "cdata",
            "type": "Text",
            "val": "<![CDATA[function myFunc(n){return n}]]>",
          },
        ],
        "type": "Block",
      },
      "column": 1,
      "filename": "<basedir>/packages/pug-filters/test/filter-aliases.test.js",
      "isInline": false,
      "line": 2,
      "name": "script",
      "selfClosing": false,
      "type": "Tag",
    },
  ],
  "type": "Block",
}
`;

exports[`test we do not support chains of aliases 1`] = `
Object {
  "code": "PUG:FILTER_ALISE_CHAIN",
  "message": "<basedir>/packages/pug-filters/test/filter-aliases.test.js:3:9

The filter \"minify-js\" is an alias for \"minify\", which is an alias for \"uglify-js\".  Pug does not support chains of filter aliases.",
}
`;
